stopped hiding the goto hint.  Removed scrollbar styling.  Updated readme.

--- a/transparent-dark.css
+++ b/transparent-dark.css
@@ -24,10 +24,6 @@ body.dark #goto {
     box-shadow: 2px 2px 5px rgba(25, 25, 25, 0.9);
 }
 
-#gotohint {
-    display: none;
-}
-
 body.dark #results .ace_autocomplete {
     color: #FFF;
     border: 0;
@@ -41,32 +37,4 @@ body.dark .ace_autocomplete {
     border-left: 0;
     border-bottom: 0;
     box-shadow: 2px 2px 5px rgba(25, 25, 25, 0.9);
-}
-
-body ::-webkit-scrollbar {
-    background: none;
-}
-
-body ::-webkit-scrollbar-track-piece {
-    margin: 4px;
-}
-
-body ::-webkit-scrollbar-thumb {
-    border: solid 0 transparent;
-    border-right-width: 4px;
-    border-left-width: 4px;
-    -webkit-border-radius: 9px 4px;
-    -webkit-box-shadow: inset 0 0 0 1px rgba(128, 128, 128, 0.2), inset 0 0 0 4px rgba(128, 128, 128, 0.2);
-}
-
-body ::-webkit-scrollbar-thumb:horizontal {
-    border-right-width: 0;
-    border-left-width: 0;
-    border-top-width: 4px;
-    border-bottom-width: 4px;
-    -webkit-border-radius: 4px 9px;
-}
-
-body ::-webkit-scrollbar-thumb:hover {
-    -webkit-box-shadow: inset 0 0 0 1px rgba(128, 128, 128, 0.9), inset 0 0 0 4px rgba(128, 128, 128, 0.9);
 }
